--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "ejs": "2.5.5",
         "hapi": "17.4.0",
+        "harbor-master": "^1.32.1",
         "lodash": "^4.17.11",
         "request": "^2.88.0",
         "vision": "^5.3.2"
